; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_obs_to_vt_colorspace.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_obs_to_vt_colorspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIDEO_CS_709 = common dso_local global i32 0, align 4
@kCVImageBufferYCbCrMatrix_ITU_R_709_2 = common dso_local global i32* null, align 8
@VIDEO_CS_601 = common dso_local global i32 0, align 4
@kCVImageBufferYCbCrMatrix_ITU_R_601_4 = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @obs_to_vt_colorspace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @obs_to_vt_colorspace(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @VIDEO_CS_709, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32*, i32** @kCVImageBufferYCbCrMatrix_ITU_R_709_2, align 8
  store i32* %8, i32** %2, align 8
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @VIDEO_CS_601, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32*, i32** @kCVImageBufferYCbCrMatrix_ITU_R_601_4, align 8
  store i32* %14, i32** %2, align 8
  br label %17

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %15
  store i32* null, i32** %2, align 8
  br label %17

17:                                               ; preds = %16, %13, %7
  %18 = load i32*, i32** %2, align 8
  ret i32* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
